--- a/templates/base.html
+++ b/templates/base.html
@@ -30,10 +30,10 @@
             <i class="fa-solid fa-magnifying-glass"></i>
           </button>
         </form>
+        <a>
+          <i class="fa-sharp fa-light fa-cart-shopping-fast" style="color: blue;"></i>
+        </a>
       </div>
-      <a>
-        <i class="fa-sharp fa-light fa-cart-shopping-fast">Carrito</i>
-      </a>
     </div>
   </nav>
     {%block body%} 
