--- a/templates/base.html
+++ b/templates/base.html
@@ -21,15 +21,18 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <a>
-        Hola, {{user_name}}
+        Hola, {{user.name}}
       </a>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <form class="d-flex">
-          <input class="form-control me-2" type="search" placeholder="Busca tus articulos" aria-label="Busca tus articulos">
+        
+        {% if user.is_authenticated %}
+        <form class="d-flex mf-3" action="/articulos/0" method="get" id="searchProduct" >
+          <input class="form-control me-2" type="search" placeholder="Busca tus articulos" aria-label="Busca tus articulos" name="Articulos">
           <button class="btn btn-outline-success" type="submit">
             <i class="fa-solid fa-magnifying-glass"></i>
           </button>
         </form>
+        {% endif %}
         <a>
           <i class="fa-sharp fa-light fa-cart-shopping-fast" style="color: blue;"></i>
         </a>
