--- a/templates/iniciar_sesion.html
+++ b/templates/iniciar_sesion.html
@@ -1,33 +1,78 @@
-{% extends "base.html" %}
+
 {% load static %}
-{% block css %}
-   <link rel="stylesheet" type="text/css" href="{%static 'forms.css'%}"/>
-{% endblock %}
-{% block title %}Inicia Sesión{% endblock %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Iniciar Sesión</title>
+</head>
+<style>
+    body{
+        background-image: url("{%static 'backgroudLogin.svg'%}");
+        height: 100vh;
+        background-size: cover;
+        background-position: center;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    header{
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        z-index: 9999;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color: white;
+    }
+    .left{
+        float: left;
+        width: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    .right{
+        float: right;
+        display: flex;
+        width: 50%;
+        align-items: center;
+        justify-content: center;
+    }
 
-{% block content %}
-    <style>
-        
-    </style>
-    <div class="container">
-
-        <form class="form" method="POST">
-            {% csrf_token %}
-            <div class="form-group">
-                <label for="username">Nombre de usuario</label>
-                {{ form.username }}
-                {{ form.username.errors }}
-            </div>
-            <div class="form-group">
-                <label for="password">Contraseña:</label>
-                {{form.password}}
-                {{ form.password.errors }}
-                <div class="submit" >
-                    <input class="submit-button" id="submit" name="submit" type="submit">
-                    <i class="fa fa-paper-plane"></i>
+</style>
+<body>
+    <header>
+        <img src="{%static 'logo.svg'%}" alt="">
+    </header>
+    <main>
+        <div class="container left">
+            <form class="form" method="POST">
+                {% csrf_token %}
+                <div class="form-group">
+                    {{ form.username }}
+                    {{ form.username.errors }}
                 </div>
-            </div>
-        </form>
-        
-    </div>
-{% endblock content %}
+                <div class="form-group">
+                    {{form.password}}
+                    {{ form.password.errors }}
+                    <div class="submit" >
+                        <input class="submit-button" id="submit" name="submit" type="submit">
+                        <i class="fa fa-paper-plane"></i>
+                    </div>
+                </div>
+            </form>
+     
+        </div>
+        <div class="container right">
+            <img src="{%static 'dinosaurLogin.svg'%}" id="">
+           
+        </div>
+    </main>
+    
+</body>
+</html>
